Uses quarto short code for embedded videos

--- a/00_setup/index.qmd
+++ b/00_setup/index.qmd
@@ -11,7 +11,7 @@ The first step is to download and install R, a programming language designed for
 
 This video talks you through the process of installing R:
 
-<iframe title="vimeo-player" src="https://player.vimeo.com/video/203516510" width="640" height="400" frameborder="0" allowfullscreen></iframe>
+{{< video https://vimeo.com/203516510 >}}
 
 
 
@@ -21,7 +21,7 @@ The next step is to download RStudio, an app that you can use to work with the R
 
 This video talks you through the process of installing RStudio:
 
-<iframe title="vimeo-player" src="https://player.vimeo.com/video/203516968" width="640" height="400" frameborder="0" allowfullscreen></iframe>
+{{< video https://vimeo.com/203516968 >}}
 
 
 
