--- a/01_getting_started/index.qmd
+++ b/01_getting_started/index.qmd
@@ -17,13 +17,13 @@ and press `Enter`.
 
 Welcome to this course on crime mapping! This course uses interactive tutorials like this one to help you learn about using maps and spatial analysis techniques to understand crime. Watch this video to learn more about the course.
 
-![](https://youtu.be/7JKWUamnBaE)
+{{< video https://youtu.be/7JKWUamnBaE >}}
 
 ## Why put crimes on maps?
 
 This course is about how we can use maps and other spatial analysis tools to help understand, prevent and respond to crime. Watch this video to understand why spatial analysis is a useful tool for understanding crime.
 
-![](https://youtu.be/qoC46-oQtv8)
+{{< video https://youtu.be/qoC46-oQtv8 >}}
 
 ::: {.box .reading}
 Weisburd, D. (2015). [The law of crime concentration and the criminology of place](https://doi.org/10.1111/1745-9125.12070). *Criminology*, 53(2), 133-157.
@@ -37,7 +37,7 @@ Farrell, G. (2015). [Crime concentration theory](https://doi.org/10.1057/cpcs.20
 
 Why is crime concentrated in space? Watch this video to find out more about how our environment influences opportunities for crime and how that causes clusters of different crimes.
 
-![](https://youtu.be/tKCpodQz8aU)
+{{< video https://youtu.be/tKCpodQz8aU >}}
 
 ::: {.box .reading}
 Santos, R. B. (2015). [Routine Activity Theory: A Cornerstone of Police Crime Analyst Work](https://ebookcentral.proquest.com/lib/ucl/reader.action?docID=1952969&ppg=130). In *The Criminal Act:*
@@ -49,7 +49,7 @@ Cohen, L. E., and Felson, M. (1979). [Social Change and Crime Rate Trends: A Rou
 
 We will use RStudio for almost all of this course. Watch this video to find your way around the different panels in the RStudio window.
 
-![](https://youtu.be/6bonySXb2_g)
+{{< video https://youtu.be/6bonySXb2_g >}}
 
 ### Slightly adjusting how RStudio works
 
