--- a/02_your_first_crime_map/index.qmd
+++ b/02_your_first_crime_map/index.qmd
@@ -32,7 +32,7 @@ To start off with, watch this video that walks through the code needed to make
 this map. Don't worry if there are things in the video that you don't understand 
 -- the rest of this tutorial will explain each line of code in turn.
 
-![](https://youtu.be/ipyKc7-ReTs)
+{{< video https://youtu.be/ipyKc7-ReTs >}}
 
 
 ### Running code in the interactive tutorials
