--- a/03_data_wrangling/index.qmd
+++ b/03_data_wrangling/index.qmd
@@ -1,3 +1,5 @@
+# Wrangling data
+
 ```{r setup, include=FALSE}
 # load packages
 library(lubridate)
@@ -6,8 +8,6 @@ library(tidyverse)
 # set knitr options
 knitr::opts_chunk$set(echo = FALSE)
 ```
-
-# Wrangling data
 
 **Learn the building blocks of data analysis: loading, filtering, manipulating and saving data for crime mapping.**
 
@@ -37,7 +37,7 @@ Start off by watching this video that walks through the different steps in
 wrangling a dataset. We will cover all the steps in the video in more detail
 during the rest of this tutorial.
 
-![](https://youtu.be/pQeJKt6O9dU)
+{{< video https://youtu.be/pQeJKt6O9dU >}}
 
 
 ### Functions
