Remove unfinished chapters, add read-functions appendix

--- a/index.qmd
+++ b/index.qmd
@@ -3,6 +3,12 @@
 **This book will give you the knowledge and skills to effectively communicate information about crime and related topics using maps. We will cover the principles of analysing geographic information and the strengths and weaknesses of different maps for communicating it.**
 
 
+::: {.box .notewell}
+
+This book is a work in progress, so not all chapters are ready at the moment. The book is likely to be finished by mid-2023.
+
+:::
+
 
 ## Who is this book for?
 
