Fix broken image links on setup page

--- a/setup.qmd
+++ b/setup.qmd
@@ -45,7 +45,11 @@ write('PATH="${RTOOLS40_HOME}\\usr\\bin;${PATH}"', file = "~/.Renviron", append 
 
   7. Press `Enter`.
 
-![](../images/rstudio_console_rtools.png)
+```{r}
+#| echo: false
+
+knitr::include_graphics(here::here("images/rstudio_console_rtools.png"))
+```
 
 
 
@@ -71,6 +75,11 @@ source("https://github.com/mpjashby/crimemapping/raw/main/inst/initialise.R")
 
   5. Press `Enter`.
   
-![](../images/rstudio_console_initialise.png)
+```{r}
+#| echo: false
+
+knitr::include_graphics(here::here("images/rstudio_console_initialise.png"))
+```
+
 
 It will take a few minutes for the set-up process to finish. Once the process is complete, you will see a message telling you this.
