Update setup code to use learncrimemapping package

--- a/setup.qmd
+++ b/setup.qmd
@@ -70,7 +70,8 @@ As we will learn in subsequent chapters, most of the mapping capabilities in R a
   4. Copy and paste the following code to the right of the `>` symbol:
 
 ```r
-source("https://github.com/mpjashby/crimemapping/raw/main/inst/initialise.R")
+if (!require("remotes")) install.packages("remotes")
+remotes::install_github("mpjashby/learncrimemapping")
 ```
 
   5. Press `Enter`.
@@ -82,4 +83,7 @@ knitr::include_graphics(here::here("images/rstudio_console_initialise.png"))
 ```
 
 
-It will take a few minutes for the set-up process to finish. Once the process is complete, you will see a message telling you this.
+::: {.callout-important}
+It will take a few minutes for the set-up process to finish. Once the process is complete, you will see the `>` symbol has appeared in the R Console again.
+:::
+
