Update screenshot of code for loading learncrimemapping package

--- a/setup.qmd
+++ b/setup.qmd
@@ -69,15 +69,20 @@ As we will learn in subsequent chapters, most of the mapping capabilities in R a
   3. Find the `>` symbol at the bottom of that panel.
   4. Copy and paste the following code to the right of the `>` symbol:
 
-```r
+```{r}
+#| eval: false
+#| filename: "R Console"
+#| code-line-numbers: false
+
 if (!require("remotes")) install.packages("remotes")
 remotes::install_github("mpjashby/learncrimemapping")
 ```
 
-  5. Press `Enter`.
+  5. Press `Enter` or `Return` on your keyboard.
   
 ```{r}
 #| echo: false
+#| out-width: 100%
 
 knitr::include_graphics(here::here("images/rstudio_console_initialise.png"))
 ```
