Add note to setup page on whether to install source packages

--- a/10_place_data/index.qmd
+++ b/10_place_data/index.qmd
@@ -1,3 +1,9 @@
+---
+execute: 
+  freeze: auto
+---
+
+
 # Using data about places {#sec-place-data}
 
 **Learn how to find and use extra data about places to improve your maps, including open data and data from OpenStreetMap**
