--- a/setup.qmd
+++ b/setup.qmd
@@ -88,6 +88,13 @@ knitr::include_graphics(here::here("images/rstudio_console_initialise.png"))
 ```
 
 
+::: {.callout-tip collapse="true"}
+#### `Do you want to install from sources the package which needs compilation?` -- what should I do?
+
+If you see a popup message appear asking `Do you want to install from sources the package which needs compilation?`, you can safely choose 'No'.
+:::
+
+
 ::: {.callout-important}
 It will take a few minutes for the set-up process to finish. Once the process is complete, you will see the `>` symbol has appeared in the R Console again.
 :::
