--- a/03_data_wrangling/index.qmd
+++ b/03_data_wrangling/index.qmd
@@ -25,9 +25,9 @@ A major step in using any data to make decisions or draw conclusions is *data wr
 
 <p class="full-width-image"><img src="../images/datawrangling.jpg" alt="Cartoon of furry monsters putting boxes onto a conveyor belt with machines marked 'wrangle', 'vizualise' and 'model' adjusting the boxes as they move along the belt"></p>
 
-Start off by watching this video that walks through the different steps in wrangling a dataset. We will cover all the steps in the video in more detail during the rest of this chapter.
+<!-- Start off by watching this video that walks through the different steps in wrangling a dataset. We will cover all the steps in the video in more detail during the rest of this chapter. -->
 
-{{< video https://youtu.be/pQeJKt6O9dU >}}
+<!-- {{< video https://youtu.be/pQeJKt6O9dU >}} -->
 
 To get started, open RStudio and check that you are working in the Crime Mapping project you created previously. To do this, looking on the top right-hand corner of the RStudio window. If you see the text `Crime Mapping`, all is well. If you see the text `Project: (None)`, click on the downward triangle next to that text and then select the Crime Mapping project -- this will cause RStudio to restart and open your project.
 
