--- a/04_your_second_crime_map/index.qmd
+++ b/04_your_second_crime_map/index.qmd
@@ -85,9 +85,9 @@ knitr::include_graphics(here::here("images/vancouver_bike_thefts.jpg"))
 ```
 
 
-Before we get into the detail of how to make this map, watch this video that goes over the main points of the code we will use. This video covers the code for both this chapter and @sec-mapping-patterns.
+<!-- Before we get into the detail of how to make this map, watch this video that goes over the main points of the code we will use. This video covers the code for both this chapter and @sec-mapping-patterns. -->
 
-{{< video https://youtu.be/apKeAbHuNFo >}}
+<!-- {{< video https://youtu.be/apKeAbHuNFo >}} -->
 
 
 ## Handling spatial data
