--- a/06_mapping_crime_patterns/index.qmd
+++ b/06_mapping_crime_patterns/index.qmd
@@ -490,6 +490,13 @@ ggplot() +
 ```
 
 
+::: {.box .reading}
+
+You can find out much more about how colours work in R by reading [_Working with colours in R_](https://nrennie.rbind.io/blog/colours-in-r/) and find many different colour palettes you can use with ggplot2 at the [Color Palette Finder](https://r-graph-gallery.com/color-palette-finder).
+
+:::
+
+
 ::: {.callout-quiz .callout}
 ### Making density maps
 
