--- a/07_map_context/index.qmd
+++ b/07_map_context/index.qmd
@@ -254,9 +254,9 @@ tribble(
 
 Elements that are almost always needed on a crime map are not necessarily highest on the visual hierarchy. For example, the author name is virtually always needed, but is relatively low on the visual hierarchy. This is because it is important information for readers who need it to judge the reliability of a map, or to get in touch to ask questions, but should not distract from the data for those readers who do not need it.
 
-Before we start learning the code needed to add titles and legends to our maps, watch this video walk-though of the main steps.
+<!-- Before we start learning the code needed to add titles and legends to our maps, watch this video walk-though of the main steps. -->
 
-{{< video https://youtu.be/P3L9yHc8H-8 >}}
+<!-- {{< video https://youtu.be/P3L9yHc8H-8 >}} -->
 
 
 
