--- a/08_handling_bugs/index.qmd
+++ b/08_handling_bugs/index.qmd
@@ -440,9 +440,9 @@ To make a reprex, we have to do two things:
   1. Remove everything from our code that does not contribute to causing the error. We do this by removing each line from our code in turn and only keeping those lines that are necessary to produce the specific error you are asking for help with -- this is why a reproducible example is sometimes called a *minimum* working example.
   2. Make sure that someone trying to help us can reproduce the issue on their own computer even if they don't have access to the particular dataset we are using. We do this by replacing our own dataset with a publicly available one, preferably one of the datasets that are built into R for exactly this purpose.
 
-Watch this video to see the process of making a reprex in RStudio:
+<!-- Watch this video to see the process of making a reprex in RStudio: -->
 
-{{< video https://youtu.be/hlcftgeTAyY >}}
+<!-- {{< video https://youtu.be/hlcftgeTAyY >}} -->
 
 
 To practice making a reproducible example, let's create a new R script that we know will produce an error. Create a new R script file (`File > New File > R Script` in RStudio), save it as `chapter_08.R`, then paste the following code into it:
